--- a/src/main/resource.prod/jdbc.properties
+++ b/src/main/resource.prod/jdbc.properties
@@ -1,5 +1,5 @@
 username=root
-password=1101
+password=xxxx
 url=jdbc:mysql://localhost:3306/furniture?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 driverClassName=com.mysql.jdbc.Driver
 initialSize=50
